update from pos, penyesuaian...

--- a/app/src/main/res/layout-land/activity_register_masukan_produk.xml
+++ b/app/src/main/res/layout-land/activity_register_masukan_produk.xml
@@ -50,11 +50,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/masukan_produk"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <View
-                        android:layout_width="@dimen/paddingXXXXLarge"
+                        android:layout_width="@dimen/paddingXXXXXLarge"
                         android:layout_height="3dp"
                         android:background="@color/green_dark" />
                 </LinearLayout>
@@ -72,6 +74,8 @@
                         android:paddingTop="@dimen/paddingXSmall"
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_bold"
                         android:text="1"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -93,6 +97,8 @@
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
                         android:text="2"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -157,6 +163,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/nama_produk"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -174,6 +182,8 @@
                         android:textColor="@color/green_dark"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="Satuan" />
 
 
@@ -218,6 +228,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/kategori_produk"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -236,6 +248,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/stok"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:inputType="number"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
@@ -264,6 +278,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/modal"
                         android:inputType="number"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -283,6 +299,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/jual"
                         android:inputType="number"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true"/>
                 </com.google.android.material.textfield.TextInputLayout>
@@ -293,10 +311,12 @@
                 android:id="@+id/btn_lanjut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
-                android:layout_marginBottom="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/paddingXLarge"
+                android:layout_marginBottom="@dimen/paddingXLarge"
                 android:background="@color/green_dark"
                 android:clickable="true"
+                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/poppins_bold"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/lanjutkan"
                 android:textColor="@color/white" />
