--- a/app/src/main/res/layout-land/fragment_mpin_dialog.xml
+++ b/app/src/main/res/layout-land/fragment_mpin_dialog.xml
@@ -17,15 +17,18 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:padding="10dp"
             android:text="@string/selamat_datang"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="@dimen/_12ssp"
+            />
 
         <View
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/view_line"
             android:layout_marginTop="@dimen/paddingXXXXXLarge"
             android:background="@color/white" />
@@ -34,7 +37,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/kasir"
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="@dimen/_12ssp"
             android:textColor="@color/white"
+            android:padding="10dp"
             android:layout_marginTop="@dimen/paddingXXXLarge"/>
 
 
@@ -42,6 +48,8 @@
             android:id="@+id/spinner_cashier_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:popupBackground="@color/black"
             android:backgroundTint="@color/white"/>
 
@@ -50,8 +58,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="LOGOUT ADMIN"
-            android:textStyle="bold"
+            android:fontFamily="@font/poppins_bold"
             android:padding="10dp"
+            android:textSize="@dimen/_12ssp"
             android:drawableRight="@drawable/ic_logout_kasir"
             android:textColor="@color/white"
             android:gravity="bottom"
@@ -77,11 +86,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:text="@string/input_mpin"
+                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/poppins_bold"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <TextView
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/default_mpin"
@@ -103,6 +115,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_13ssp"
                     android:clickable="false"
                     android:focusable="false"
                     android:gravity="center"
@@ -117,6 +131,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_13ssp"
                     android:clickable="false"
                     android:focusable="false"
                     android:gravity="center"
@@ -131,6 +147,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_13ssp"
                     android:clickable="false"
                     android:focusable="false"
                     android:gravity="center"
@@ -145,6 +163,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_13ssp"
                     android:clickable="false"
                     android:focusable="false"
                     android:gravity="center"
@@ -159,6 +179,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_13ssp"
                     android:clickable="false"
                     android:focusable="false"
                     android:gravity="center"
@@ -173,6 +195,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_13ssp"
                     android:clickable="false"
                     android:focusable="false"
                     android:gravity="center"
@@ -196,6 +220,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -209,6 +235,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:clickable="true"
                     android:focusable="true"
                     android:foreground="?attr/selectableItemBackground"
@@ -226,6 +254,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -250,6 +280,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -265,6 +297,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -280,6 +314,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -304,6 +340,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -319,6 +357,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -334,6 +374,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -359,6 +401,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -374,6 +418,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -389,6 +435,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
