--- a/app/src/main/res/layout-sw600dp/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp/activity_register.xml
@@ -38,11 +38,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/daftar"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <View
-                android:layout_width="@dimen/paddingXXXXLarge"
+                android:layout_width="@dimen/paddingXXXXXLarge"
                 android:layout_height="3dp"
                 android:background="@color/green_dark" />
 
@@ -59,6 +61,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_9ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textEmailAddress"
                     android:singleLine="true" />
@@ -76,6 +80,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/kata_sandi"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_9ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
                     android:singleLine="true"
@@ -97,6 +103,8 @@
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
                     android:singleLine="true"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_9ssp"
                     android:textColorHint="@color/green_dark" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,6 +113,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="false"
+                android:textColor="@color/black"
+                android:fontFamily="@font/poppins_regular"
+                android:textSize="@dimen/_9ssp"
                 android:buttonTint="@color/green_dark"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:text="@string/privacy_policy" />
@@ -115,6 +126,8 @@
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:background="@color/green_dark"
                 android:clickable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:id="@+id/btn_daftar"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/daftar"
@@ -131,6 +144,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_9ssp"
                     android:text="@string/memiliki_akun" />
 
                 <TextView
@@ -138,6 +153,8 @@
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     android:id="@+id/btn_masuk"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_9ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingLeft="@dimen/paddingSmall"
                     android:paddingRight="@dimen/paddingSmall"
