--- a/app/src/main/res/layout-sw600dp/fragment_add_order_dialog.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_add_order_dialog.xml
@@ -29,9 +29,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/nama_produk"
+                android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="@dimen/_9ssp"/>
 
 
         </RelativeLayout>
@@ -89,6 +89,7 @@
                     android:layout_weight="1"
                     android:width="38dp"
                     android:height="38dp"
+                    android:fontFamily="@font/poppins_regular"
                     android:clickable="true"
                     android:digits="0123456789"
                     android:focusable="true"
@@ -98,7 +99,7 @@
                     android:inputType="number"
                     android:text="1"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/_10ssp"
                     android:textStyle="bold" />
 
 
@@ -159,11 +160,12 @@
                     android:layout_height="wrap_content"
                     android:text="Catatan"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:padding="16dp"
-                    android:textStyle="bold" />
+                    android:textSize="@dimen/_8ssp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:padding="16dp" />
 
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/tv_catatan2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -186,9 +188,9 @@
                     android:lines="3"
                     android:maxLines="3"
                     android:imeOptions="flagNoExtractUi"
-
+                    android:fontFamily="@font/poppins_regular"
                     android:gravity="top"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/_8ssp"
                     android:layout_below="@+id/tv_catatan2"/>
 
 
@@ -212,6 +214,8 @@
                     android:background="@color/green_dark"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_9ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:text="Rp 0"
                     android:textColor="@color/white" />
