--- a/app/src/main/res/layout-sw600dp/fragment_mpin_dialog.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_mpin_dialog.xml
@@ -16,31 +16,39 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:padding="10dp"
             android:text="@string/selamat_datang"
+            android:fontFamily="@font/poppins_bold"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/_9ssp"
             android:textStyle="bold" />
 
         <View
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/view_line"
-            android:layout_marginTop="@dimen/paddingXXXXXLarge"
+            android:layout_marginTop="@dimen/paddingSmall"
             android:background="@color/white" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/kasir"
+            android:padding="10dp"
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="@dimen/_9ssp"
             android:textColor="@color/white"
-            android:layout_marginTop="@dimen/paddingXXXLarge"/>
+            android:layout_marginTop="@dimen/paddingSmall"/>
 
 
         <Spinner
             android:id="@+id/spinner_cashier_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:popupBackground="@color/black"
             android:backgroundTint="@color/white"/>
 
@@ -49,12 +57,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="LOGOUT ADMIN"
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="@dimen/_9ssp"
             android:textStyle="bold"
             android:padding="10dp"
             android:drawableRight="@drawable/ic_logout_kasir"
             android:textColor="@color/white"
             android:gravity="bottom"
-            android:layout_marginTop="@dimen/paddingXXXXLarge"/>
+            android:layout_marginTop="@dimen/paddingXXXXXLarge"/>
 
 
     </LinearLayout>
@@ -75,14 +85,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/paddingLarge"
             android:text="@string/input_mpin"
+            android:textSize="@dimen/_8ssp"
+            android:fontFamily="@font/poppins_bold"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:textColor="@color/black" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/default_mpin"
             android:textAlignment="center"
             android:textSize="12sp" />
 
@@ -101,6 +111,8 @@
                 android:layout_marginLeft="@dimen/paddingXXXSmall"
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_10ssp"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center"
@@ -115,6 +127,8 @@
                 android:layout_marginLeft="@dimen/paddingXXXSmall"
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_10ssp"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center"
@@ -129,6 +143,8 @@
                 android:layout_marginLeft="@dimen/paddingXXXSmall"
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_10ssp"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center"
@@ -143,6 +159,8 @@
                 android:layout_marginLeft="@dimen/paddingXXXSmall"
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_10ssp"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center"
@@ -157,6 +175,8 @@
                 android:layout_marginLeft="@dimen/paddingXXXSmall"
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_10ssp"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center"
@@ -171,6 +191,8 @@
                 android:layout_marginLeft="@dimen/paddingXXXSmall"
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_10ssp"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center"
@@ -194,6 +216,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -209,6 +233,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -224,6 +250,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -248,6 +276,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -263,6 +293,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -278,6 +310,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -302,6 +336,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -317,6 +353,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -332,6 +370,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -357,6 +397,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -372,6 +414,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
@@ -387,6 +431,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingTop="@dimen/paddingSmall"
                 android:paddingBottom="@dimen/paddingSmall"
