--- a/app/src/main/res/layout/fragment_mpin_dialog.xml
+++ b/app/src/main/res/layout/fragment_mpin_dialog.xml
@@ -15,17 +15,19 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:fontFamily="@font/poppins_bold"
             android:text="@string/selamat_datang"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
 
         <View
             android:layout_width="wrap_content"
+            android:layout_gravity="left"
             android:layout_height="1dp"
-            android:visibility="gone"
             android:id="@+id/view_line"
-            android:layout_marginTop="@dimen/paddingLarge"
+            android:layout_marginTop="@dimen/paddingSmall"
             android:background="@color/white" />
 
         <TextView
@@ -33,6 +35,8 @@
             android:layout_height="wrap_content"
             android:text="@string/kasir"
             android:textColor="@color/white"
+            android:textSize="@dimen/_12ssp"
+            android:fontFamily="@font/poppins_bold"
             android:layout_marginTop="@dimen/paddingSmall"/>
 
 
@@ -40,6 +44,7 @@
             android:id="@+id/spinner_cashier_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:popupBackground="@color/black"
             android:backgroundTint="@color/white"/>
 
@@ -64,11 +69,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:text="@string/input_mpin"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_12ssp"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <TextView
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/default_mpin"
@@ -92,6 +100,8 @@
                     android:layout_weight="1"
                     android:clickable="false"
                     android:focusable="false"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="numberPassword"
@@ -106,6 +116,8 @@
                     android:layout_weight="1"
                     android:clickable="false"
                     android:focusable="false"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="numberPassword"
@@ -120,6 +132,8 @@
                     android:layout_weight="1"
                     android:clickable="false"
                     android:focusable="false"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="numberPassword"
@@ -134,6 +148,8 @@
                     android:layout_weight="1"
                     android:clickable="false"
                     android:focusable="false"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="numberPassword"
@@ -148,6 +164,8 @@
                     android:layout_weight="1"
                     android:clickable="false"
                     android:focusable="false"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="numberPassword"
@@ -162,6 +180,8 @@
                     android:layout_weight="1"
                     android:clickable="false"
                     android:focusable="false"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="numberPassword"
@@ -183,6 +203,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -198,6 +220,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -213,6 +237,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -237,6 +263,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -252,6 +280,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -267,6 +297,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -291,6 +323,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -306,6 +340,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -321,6 +357,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -346,6 +384,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -361,6 +401,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -376,6 +418,8 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:focusable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingTop="@dimen/paddingSmall"
                     android:paddingBottom="@dimen/paddingSmall"
@@ -403,6 +447,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="LOGOUT ADMIN"
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="@dimen/_12ssp"
             android:textStyle="bold"
             android:padding="10dp"
             android:drawableRight="@drawable/ic_logout_kasir"
