--- a/app/src/main/res/layout/item_add_order_horizontal.xml
+++ b/app/src/main/res/layout/item_add_order_horizontal.xml
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="14sp"
+                android:fontFamily="@font/poppins_regular"
                 android:textStyle="bold"
                 android:text="Level Gula"/>
 
