--- a/app/src/main/res/layout-land/activity_daftar_pelanggan.xml
+++ b/app/src/main/res/layout-land/activity_daftar_pelanggan.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/paddingSmall"
+            android:layout_margin="@dimen/paddingXSmall"
             android:gravity="center_vertical">
 
             <ImageView
@@ -32,13 +32,31 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="15dp"
+                android:fontFamily="@font/poppins_bold"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="@dimen/paddingSmall"
                 android:layout_toRightOf="@+id/iv_back"
                 android:gravity="center_horizontal"
                 android:text="@string/daftar_pelanggan"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/tv_tanpa_pelanggan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/iv_back"
+                android:layout_alignBottom="@+id/iv_back"
+                android:layout_toLeftOf="@+id/tv_tambah_pelanggan"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/poppins_bold"
+                android:layout_marginRight="@dimen/paddingSmall"
+                android:drawableLeft="@drawable/ic_pelanggan"
+                android:drawablePadding="@dimen/paddingSmall"
+                android:gravity="center"
+                android:text="@string/non_pelanggan"
                 android:textColor="@color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tv_tambah_pelanggan"
@@ -50,6 +68,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
+                android:fontFamily="@font/poppins_bold"
                 android:layout_marginRight="@dimen/paddingSmall"
                 android:drawableLeft="@drawable/ic_add"
                 android:drawablePadding="@dimen/paddingSmall"
@@ -79,11 +98,11 @@
             android:layout_marginTop="@dimen/paddingSmall"
             android:layout_marginRight="@dimen/paddingSmall"
             android:backgroundTint="@android:color/transparent"
+            android:singleLine="true"
             android:drawableLeft="@drawable/ic_search"
             android:drawablePadding="@dimen/paddingSmall"
             android:hint="@string/cari_pelanggan"
-            android:imeOptions="flagNoExtractUi|actionSearch"
-            android:singleLine="true" />
+            android:imeOptions="flagNoExtractUi|actionSearch" />
 
         <View
             android:layout_width="match_parent"
