--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -38,11 +38,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/daftar"
-                android:textColor="@color/black"
-                android:textStyle="bold" />
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_12ssp"
+                android:textColor="@color/black" />
 
             <View
-                android:layout_width="@dimen/paddingXXXXLarge"
+                android:layout_width="@dimen/paddingXXXXXLarge"
                 android:layout_height="3dp"
                 android:background="@color/green_dark" />
 
@@ -59,6 +60,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_12ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textEmailAddress"
                     android:singleLine="true" />
@@ -76,6 +79,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/kata_sandi"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_12ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
                     android:singleLine="true"
@@ -95,6 +100,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/ulang_kata_sandi"
                     android:imeOptions="flagNoExtractUi"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_12ssp"
                     android:inputType="textPassword"
                     android:singleLine="true"
                     android:textColorHint="@color/green_dark" />
@@ -105,6 +112,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="false"
+                android:fontFamily="@font/poppins_regular"
+                android:textSize="@dimen/_12ssp"
                 android:buttonTint="@color/green_dark"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:text="@string/privacy_policy" />
@@ -115,6 +124,8 @@
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:background="@color/green_dark"
                 android:clickable="true"
+                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/poppins_bold"
                 android:id="@+id/btn_daftar"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/daftar"
@@ -131,12 +142,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_12ssp"
                     android:text="@string/memiliki_akun" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:id="@+id/btn_masuk"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingLeft="@dimen/paddingSmall"
