--- a/app/src/main/res/layout-land/activity_register_informasi_usaha.xml
+++ b/app/src/main/res/layout-land/activity_register_informasi_usaha.xml
@@ -52,11 +52,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/info_usaha"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <View
-                        android:layout_width="@dimen/paddingXXXXLarge"
+                        android:layout_width="@dimen/paddingXXXXXLarge"
                         android:layout_height="3dp"
                         android:background="@color/green_dark" />
                 </LinearLayout>
@@ -75,6 +77,8 @@
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
                         android:text="1"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
 
@@ -94,6 +98,8 @@
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
                         android:text="2"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_bold"
                         android:textColor="@android:color/darker_gray"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -119,6 +125,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/nama_anda"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -138,6 +146,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/no_telp"
                         android:inputType="phone"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -163,8 +173,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/nama_usaha"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
+
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -179,6 +192,8 @@
                     <TextView
                         android:textColor="@color/green_dark"
                         android:layout_width="match_parent"
+                        android:textSize="@dimen/_10ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:layout_height="wrap_content"
                         android:text="Jenis usaha" />
 
@@ -187,6 +202,8 @@
                             android:id="@+id/spinner_usaha"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/_12ssp"
+                            android:fontFamily="@font/poppins_regular"
                             android:backgroundTint="@color/black"
                             android:popupBackground="@color/white" />
 
@@ -206,6 +223,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/alamat"
+                    android:textSize="@dimen/_12ssp"
+                    android:fontFamily="@font/poppins_regular"
                     android:imeOptions="flagNoExtractUi"
                     android:singleLine="true"
                     android:textColorHint="@color/green_dark" />
@@ -233,6 +252,8 @@
                         android:textColor="@color/green_dark"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="@string/pilih_provinsi" />
 
 
@@ -240,6 +261,8 @@
                             android:id="@+id/spinner_prov"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/_12ssp"
+                            android:fontFamily="@font/poppins_regular"
                             android:backgroundTint="@color/black"
                             android:popupBackground="@color/white" />
 
@@ -258,6 +281,8 @@
                         android:textColor="@color/green_dark"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="@string/pilih_kota" />
 
                     <Spinner
@@ -265,6 +290,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/black"
+                        android:textSize="@dimen/_12ssp"
+                        android:fontFamily="@font/poppins_regular"
                         android:popupBackground="@color/white" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -277,7 +304,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/paddingLarge"
-                android:layout_marginBottom="@dimen/paddingLarge"
+                android:layout_marginBottom="@dimen/paddingXXLarge"
                 android:background="@color/green_dark"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackground"
