--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -131,6 +131,8 @@
 
                         <Spinner
                             android:id="@+id/spin_lantai"
+                            android:layout_marginLeft="@dimen/_10sdp"
+                            android:layout_marginRight="@dimen/_10sdp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"></Spinner>
 
@@ -138,8 +140,9 @@
                             android:id="@+id/jumlah_meja"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/paddingXSmall"
-                            android:text="10 Meja" />
+                            android:textSize="@dimen/_8ssp"
+                            android:fontFamily="@font/poppins_regular"
+                            android:layout_marginLeft="@dimen/paddingXSmall" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -158,6 +161,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/paddingXSmall"
                             android:layout_marginRight="@dimen/paddingSmall"
+                            android:fontFamily="@font/poppins_regular"
+                            android:textSize="@dimen/_8ssp"
                             android:text="Meja Kosong" />
 
                         <View
@@ -170,6 +175,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/paddingXSmall"
                             android:layout_marginRight="@dimen/paddingSmall"
+                            android:fontFamily="@font/poppins_regular"
+                            android:textSize="@dimen/_8ssp"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:layout_marginEnd="@dimen/_5sdp"
                             android:text="@string/meja_terisi" />
 
 
@@ -305,6 +314,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/green_dark"
+                        android:fontFamily="@font/poppins_bold"
+                        android:textSize="@dimen/_12ssp"
                         android:text="RP 0"
                         android:textColor="@color/white" />
                 </RelativeLayout>
