--- a/app/src/main/res/layout-sw600dp/activity_register_verifikasi.xml
+++ b/app/src/main/res/layout-sw600dp/activity_register_verifikasi.xml
@@ -38,17 +38,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/verifikasi"
+                android:textSize="@dimen/_9ssp"
+                android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <View
-                android:layout_width="@dimen/paddingXXXXLarge"
+                android:layout_width="@dimen/paddingXXXXXLarge"
                 android:layout_height="3dp"
                 android:background="@color/green_dark" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:textSize="@dimen/_9ssp"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:text="@string/verifikasi_email" />
 
@@ -68,6 +72,8 @@
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:textSize="@dimen/_10ssp"
+                    android:fontFamily="@font/poppins_regular"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="number"
                     android:maxLength="1"
@@ -80,7 +86,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
-
+                    android:textSize="@dimen/_10ssp"
+                    android:fontFamily="@font/poppins_regular"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="number"
@@ -95,6 +102,8 @@
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:textSize="@dimen/_10ssp"
+                    android:fontFamily="@font/poppins_regular"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="number"
                     android:maxLength="1"
@@ -107,6 +116,8 @@
                     android:layout_marginLeft="@dimen/paddingXXXSmall"
                     android:layout_marginRight="@dimen/paddingXXXSmall"
                     android:layout_weight="1"
+                    android:textSize="@dimen/_10ssp"
+                    android:fontFamily="@font/poppins_regular"
                     android:gravity="center"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="number"
@@ -122,6 +133,8 @@
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:background="@color/green_dark"
                 android:clickable="true"
+                android:textSize="@dimen/_9ssp"
+                android:fontFamily="@font/poppins_bold"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/lanjutkan"
                 android:textColor="@color/white" />
