--- a/app/src/main/res/layout-sw600dp/app_bar_main.xml
+++ b/app/src/main/res/layout-sw600dp/app_bar_main.xml
@@ -51,9 +51,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="NAMA RESTORAN"
+                                android:fontFamily="@font/poppins_bold"
                                 android:textColor="@color/black"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
+                                android:textSize="@dimen/_9ssp" />
 
 
                             <TextView
@@ -61,8 +61,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Budi Setiawan"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textColor="@color/black"
-                                android:textSize="13sp" />
+                                android:textSize="@dimen/_8ssp" />
 
                         </LinearLayout>
 
@@ -77,12 +78,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:layout_marginLeft="20dp"
+                                android:layout_marginLeft="50dp"
+                                android:layout_marginRight="40dp"
                                 android:layout_toStartOf="@+id/img_barcode"
                                 android:layout_toLeftOf="@+id/img_barcode"
                                 android:background="@drawable/bg_edittext_rounded"
                                 android:focusableInTouchMode="true"
                                 android:hint="@string/pencarian"
+                                android:fontFamily="@font/poppins_regular"
                                 android:imeOptions="actionSearch|flagNoExtractUi"
                                 android:inputType="text"
                                 android:maxLines="1"
@@ -95,6 +98,7 @@
                                 android:textColorHint="@color/gray_txt" />
 
                             <ImageView
+                                android:visibility="gone"
                                 android:id="@+id/img_barcode"
                                 android:layout_width="wrap_content"
                                 android:paddingBottom="@dimen/paddingLarge"
@@ -154,6 +158,7 @@
                             android:id="@+id/spin_jenis_pesanan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
                             android:backgroundTint="@color/black" />
 
 
@@ -183,7 +188,7 @@
                             android:gravity="center"
                             android:background="@drawable/badge_background"
                             android:padding="3dp"
-                            android:text="0"
+                            android:text=""
                             android:textStyle="bold"
                             android:textColor="@android:color/white"
                             android:textSize="10sp" />
