--- a/app/src/main/res/layout-sw600dp/dialog_select_table.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_select_table.xml
@@ -14,12 +14,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/paddingSmall"
+            android:layout_marginLeft="@dimen/paddingLarge"
             android:gravity="center"
             android:text="Meja 3"
             android:textAllCaps="true"
+            android:fontFamily="@font/poppins_bold"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/_9ssp"
             android:textStyle="bold" />
 
         <ImageView
@@ -58,8 +59,8 @@
                 android:layout_marginBottom="@dimen/paddingSmall"
                 android:text="@string/jum_orang"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:fontFamily="@font/poppins_regular"
+                android:textSize="@dimen/_8ssp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -87,6 +88,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_toRightOf="@+id/btn_decrease"
                     android:layout_weight="1"
+                    android:fontFamily="@font/poppins_bold"
                     android:width="38dp"
                     android:height="38dp"
                     android:clickable="true"
@@ -98,8 +100,7 @@
                     android:inputType="number"
                     android:text="1"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textSize="@dimen/_8ssp"/>
 
 
                 <Button
@@ -123,9 +124,9 @@
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:layout_marginBottom="@dimen/paddingSmall"
                 android:text="@string/jum_meja"
+                android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="@dimen/_8ssp" />
 
             <RadioGroup
                 android:id="@+id/radio_grup"
@@ -141,6 +142,8 @@
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/black"
                     android:checked="true"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_8ssp"
                     android:clickable="false"
                     android:focusable="false"
                     android:text="@string/satu_meja" />
@@ -151,6 +154,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/paddingSmall"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_8ssp"
                     android:buttonTint="@color/black"
                     android:clickable="false"
                     android:focusable="false"
@@ -181,12 +186,13 @@
                     android:layout_marginBottom="@dimen/paddingSmall"
                     android:text="@string/pilih_meja"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_8ssp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_meja"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+                    android:layout_height="wrap_content"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -208,6 +214,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_7ssp"
                         android:layout_marginLeft="@dimen/paddingXSmall"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:text="@string/terisi" />
@@ -224,6 +232,8 @@
                         android:layout_gravity="center"
                         android:layout_marginLeft="@dimen/paddingXSmall"
                         android:layout_marginRight="@dimen/paddingSmall"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_7ssp"
                         android:text="@string/pilih" />
 
                     <View
@@ -236,8 +246,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:fontFamily="@font/poppins_regular"
                         android:layout_marginLeft="@dimen/paddingXSmall"
                         android:layout_marginRight="@dimen/paddingSmall"
+                        android:textSize="@dimen/_7ssp"
                         android:text="@string/tersedia" />
 
 
@@ -293,6 +305,8 @@
                 android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/ic_close"
                 android:text="@string/order"
+                android:textSize="@dimen/_8ssp"
+                android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/white" />
         </RelativeLayout>
     </LinearLayout>
