--- a/app/src/main/res/layout-sw600dp/dialog_tanpa_pelanggan.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_tanpa_pelanggan.xml
@@ -17,12 +17,11 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/paddingSmall"
             android:gravity="center"
-            android:text="@string/pelanggan_baru"
+            android:text="@string/non_pelanggan"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="@dimen/_12ssp"
-            android:fontFamily="@font/poppins_bold"
-            android:textStyle="bold" />
+            android:textSize="@dimen/_9ssp"
+            android:fontFamily="@font/poppins_bold" />
 
         <ImageView
             android:id="@+id/btn_close"
@@ -44,54 +43,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
         android:background="@color/gray_light"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:orientation="horizontal"
         android:padding="@dimen/paddingLarge">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/poin"
-                android:fontFamily="@font/poppins_bold"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12ssp" />
-
-            <EditText
-                android:id="@+id/txt_point"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_edittext_rounded_gray_2"
-                android:drawableLeft="@drawable/ic_poin"
-                android:drawablePadding="@dimen/paddingXSmall"
-                android:imeOptions="flagNoExtractUi"
-                android:gravity="right"
-                android:fontFamily="@font/poppins_regular"
-                android:textSize="@dimen/_12ssp"
-                android:selectAllOnFocus="true"
-                android:singleLine="true"
-                android:inputType="number"
-                android:paddingLeft="@dimen/paddingSmall"
-                android:paddingTop="@dimen/paddingXSmall"
-                android:paddingRight="@dimen/paddingSmall"
-                android:paddingBottom="@dimen/paddingXSmall"
-                android:text="0" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingRight="@dimen/paddingXXLarge">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -103,33 +64,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/nama"
-                    android:textSize="@dimen/_12ssp"
                     android:fontFamily="@font/poppins_regular"
+                    android:textSize="@dimen/_9ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingSmall"
-                android:text="@string/jenis_kelamin"
-                android:fontFamily="@font/poppins_regular"
-                android:textColor="@color/green_dark"
-                android:textSize="@dimen/_12ssp" />
-
-            <Spinner
-                android:id="@+id/spin_jk"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -143,28 +82,32 @@
                     android:hint="@string/nohp"
                     android:inputType="phone"
                     android:fontFamily="@font/poppins_regular"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="@dimen/_9ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingSmall"
+        </LinearLayout>
 
-                android:layout_marginBottom="@dimen/paddingSmall"
-                app:hintTextAppearance="@style/TextLabel">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_alamat"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/alamat"
-                    android:fontFamily="@font/poppins_regular"
-                    android:textSize="@dimen/_12ssp"
-                    android:imeOptions="flagNoExtractUi"/>
-            </com.google.android.material.textfield.TextInputLayout>
+        <LinearLayout
+
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/paddingSmall"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/paddingSmall"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
 
 
         </LinearLayout>
@@ -183,12 +126,9 @@
             android:background="@color/white" />
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_15sdp"
-            android:layout_marginTop="@dimen/_15sdp">
+            android:layout_weight="3">
 
             <ProgressBar
                 android:id="@+id/pb_loading"
@@ -212,7 +152,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/poppins_bold"
-                android:textSize="@dimen/_12ssp"
+                android:textSize="@dimen/_9ssp"
                 android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/ic_close"
                 android:text="@string/simpan"
