--- a/app/src/main/res/layout-sw600dp/item_daftar_pelanggan.xml
+++ b/app/src/main/res/layout-sw600dp/item_daftar_pelanggan.xml
@@ -9,7 +9,6 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="@dimen/paddingXSmall">
@@ -19,6 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/poppins_regular"
             android:text="Amar Hasan"
             android:textColor="@color/black" />
 
@@ -27,6 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
+            android:fontFamily="@font/poppins_regular"
             android:text="Pondok Aren"
             android:textColor="@color/black" />
 
@@ -35,6 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.3"
+            android:fontFamily="@font/poppins_regular"
             android:text="1000"
             android:textAllCaps="true"
             android:textColor="@color/black" />
@@ -45,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.3"
             android:text="L"
+            android:fontFamily="@font/poppins_regular"
             android:textAllCaps="true"
             android:textColor="@color/black" />
 
@@ -54,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:text="081312345678"
+            android:fontFamily="@font/poppins_regular"
             android:textAllCaps="true"
             android:textColor="@color/black" />
 
