--- a/app/src/main/res/layout/activity_daftar_pelanggan.xml
+++ b/app/src/main/res/layout/activity_daftar_pelanggan.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/paddingSmall"
+            android:layout_margin="@dimen/paddingXSmall"
             android:gravity="center_vertical">
 
             <ImageView
@@ -41,21 +41,35 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tv_tanpa_pelanggan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="@dimen/paddingSmall"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="@dimen/paddingSmall"
+                android:drawableLeft="@drawable/ic_pelanggan"
+                android:drawablePadding="@dimen/paddingSmall"
+                android:layout_toLeftOf="@+id/tv_tambah_pelanggan"
+                android:gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:fontFamily="@font/poppins_bold"/>
+
+            <TextView
                 android:id="@+id/tv_tambah_pelanggan"
                 android:layout_width="wrap_content"
                 android:drawableTint="@color/green_dark"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/iv_back"
-                android:layout_alignBottom="@+id/iv_back"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="15dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="@dimen/paddingSmall"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="@dimen/paddingSmall"
                 android:drawableLeft="@drawable/ic_add"
-                android:gravity="center"
+                android:drawablePadding="@dimen/paddingSmall"
+                android:layout_alignParentRight="true"
+                android:gravity="center_horizontal"
                 android:textColor="@color/black"
-                android:textStyle="bold" />
+                android:fontFamily="@font/poppins_bold"/>
 
         </RelativeLayout>
 
@@ -76,6 +90,7 @@
             android:layout_marginLeft="@dimen/paddingSmall"
             android:layout_marginTop="@dimen/paddingSmall"
             android:layout_marginRight="@dimen/paddingSmall"
+            android:fontFamily="@font/poppins_regular"
             android:backgroundTint="@android:color/transparent"
             android:singleLine="true"
             android:drawableLeft="@drawable/ic_search"
@@ -102,6 +117,7 @@
                 android:layout_weight="1"
                 android:textSize="12sp"
                 android:text="@string/nama"
+                android:fontFamily="@font/poppins_regular"
                 android:textAllCaps="true"
                 android:textStyle="bold" />
 
@@ -111,6 +127,7 @@
                 android:layout_weight="1.4"
                 android:text="@string/alamat"
                 android:textSize="12sp"
+                android:fontFamily="@font/poppins_regular"
                 android:textAllCaps="true"
                 android:textStyle="bold" />
 
@@ -122,6 +139,7 @@
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="0.3"
                 android:text="@string/poin"
+                android:fontFamily="@font/poppins_regular"
                 android:textAllCaps="true"
                 android:textStyle="bold" />
 
@@ -130,6 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.3"
                 android:text="@string/lp"
+                android:fontFamily="@font/poppins_regular"
                 android:textSize="12sp"
                 android:textAllCaps="true"
                 android:textStyle="bold" />
@@ -141,6 +160,7 @@
                 android:textSize="12sp"
                 android:text="@string/telepon"
                 android:textAllCaps="true"
+                android:fontFamily="@font/poppins_regular"
                 android:textStyle="bold" />
 
         </LinearLayout>
