--- a/app/src/main/res/layout/custom_tab.xml
+++ b/app/src/main/res/layout/custom_tab.xml
@@ -10,7 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textAlignment="center"
-        android:textSize="@dimen/textLarge"
-        android:textColor="@android:color/black"
+        android:fontFamily="@font/poppins_regular"
+        android:textSize="@dimen/_7ssp"
+        android:textColor="@color/black"
         android:gravity="center"/>
+
 </LinearLayout>
