--- a/app/src/main/res/layout/fragment_add_order_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_order_dialog.xml
@@ -51,6 +51,7 @@
                 android:gravity="left"
                 android:text="@string/nama_produk"
                 android:textColor="@color/white"
+                android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -105,11 +106,12 @@
                 android:layout_height="wrap_content"
                 android:padding="16dp"
                 android:text="Catatan"
+                android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="16sp" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_catatan2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -133,8 +135,9 @@
                 android:imeOptions="flagNoExtractUi"
                 android:lines="3"
                 android:maxLines="3"
+                android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/black"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -172,6 +175,7 @@
                 android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:hint="0"
+                android:fontFamily="@font/poppins_regular"
                 android:inputType="number"
                 android:text="1"
                 android:textColor="@android:color/black"
@@ -201,6 +205,7 @@
                 android:background="@color/green_dark"
                 android:clickable="true"
                 android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="Rp 0"
                 android:textColor="@color/white" />
