--- a/app/src/main/res/layout/fragment_pesanan.xml
+++ b/app/src/main/res/layout/fragment_pesanan.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/frame_content"
+    android:fillViewport="true"
     tools:context=".fragment.PesananFragment">
-
 
 
     <LinearLayout
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/liner_lokasi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,24 +61,23 @@
         </LinearLayout>
 
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_order_pesanan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_order_pesanan_tambahan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_order_pesanan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_order_pesanan_tambahan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_order_pesanan_meja"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_order_pesanan_meja"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
     </LinearLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
