--- a/app/src/main/res/layout/item_add_order_vertical.xml
+++ b/app/src/main/res/layout/item_add_order_vertical.xml
@@ -36,16 +36,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/green_dark"
-
+                    android:fontFamily="@font/poppins_regular"
                     android:text="Normal"
-                    android:textSize="14sp"></RadioButton>
-                <!--</RadioGroup>-->
+                    android:textSize="14sp"/>
 
                 <TextView
                     android:id="@+id/tv_harga_radio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="5000"
+                    android:fontFamily="@font/poppins_regular"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/gray_txt"
@@ -77,6 +77,7 @@
                     android:buttonTint="@color/green_dark"
                     android:checked="false"
                     android:gravity="center"
+                    android:fontFamily="@font/poppins_regular"
                     android:text="Es batu"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
@@ -86,6 +87,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:fontFamily="@font/poppins_regular"
                     android:layout_marginLeft="10dp"
                     android:text="5000"
                     android:textColor="@color/gray_txt"
