--- a/app/src/main/res/layout/item_meja.xml
+++ b/app/src/main/res/layout/item_meja.xml
@@ -13,10 +13,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Meja A"
+        android:fontFamily="@font/poppins_regular"
         android:gravity="center"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
         android:layout_centerVertical="true"
-        android:textColor="@color/black"
         android:textSize="16sp"
         android:id="@+id/tv_nama_meja"/>
 </RelativeLayout>
