--- a/app/src/main/res/layout/item_select_meja.xml
+++ b/app/src/main/res/layout/item_select_meja.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Meja A"
+        android:fontFamily="@font/poppins_regular"
         android:layout_centerInParent="true"
         android:textColor="@color/black"
         android:textSize="12sp"
