--- a/app/src/main/res/layout/item_selected_additional_produk.xml
+++ b/app/src/main/res/layout/item_selected_additional_produk.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
+            android:fontFamily="@font/poppins_regular"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="13sp"/>
@@ -32,6 +33,7 @@
             android:layout_marginRight="@dimen/paddingXXLarge"
             android:layout_toRightOf="@id/tv_tv_plus"
             android:text="Topping bubble"
+            android:fontFamily="@font/poppins_regular"
             android:textColor="@color/black"
             android:textStyle="normal"
             android:textSize="13sp"/>
@@ -43,6 +45,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textStyle="normal"
+            android:fontFamily="@font/poppins_regular"
             android:layout_toRightOf="@id/tv_nama_variant"
             android:layout_toLeftOf="@id/img_del_gone"
             android:layout_marginRight="15dp"
