--- a/app/src/main/res/layout/item_tambahan_order.xml
+++ b/app/src/main/res/layout/item_tambahan_order.xml
@@ -48,6 +48,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1"
+                        android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/black"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -62,6 +63,7 @@
                         android:layout_marginRight="@dimen/paddingXXLarge"
                         android:layout_toRightOf="@id/tv_jumlah_order"
                         android:text="Nama Makanan"
+                        android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/black"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -76,6 +78,7 @@
                         android:layout_toLeftOf="@id/img_del"
                         android:layout_toRightOf="@id/tv_nama_makanan"
                         android:gravity="end"
+                        android:fontFamily="@font/poppins_bold"
                         android:text="20.000"
                         android:textColor="@color/black"
                         android:textSize="13sp"
